landing page tweaks

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -294,7 +294,8 @@ $header-text-line-height = 1.3em
 
 $header-block-title-color = $white
 $header-block-title-font = $sans-serif-headline
-$header-block-title-size = rem(60)
+$header-block-title-size-mobile = rem(36)
+$header-block-title-size-desktop = rem(60)
 $header-block-title-weight = 700
 $header-block-title-transform = uppercase
 
