--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -5,15 +5,18 @@
     position: absolute
     left: 50%
     top: 50%
-    transform: translate(-50%, -50%)
+    transform: 'translate(%s, calc(%s - %s))' % (-50% -50% rem(((31.75+16.5)/2)px))
     margin 0
     z-index 5
 
     color: $header-block-title-color
     font-family: $header-block-title-font
-    font-size: $header-block-title-size
+    font-size: $header-block-title-size-mobile
     font-weight: $header-block-title-weight
     text-transform: $header-block-title-transform
+    +above(m)
+      font-size: $header-block-title-size-desktop
+      transform: 'translate(%s, calc(%s - %s))' % (-50% -50% rem(((53.5+33)/2)px))
 
   figure
     margin 0
@@ -23,34 +26,55 @@
 
 
 .page-type--landing
-  figure
-    position relative
-    z-index 0
-    &::before
-      position absolute
-      background-color $white
-      bottom rem(50px)
-      left 50%
-      margin-left -(rem((45/2)px))
-      content: ''
-      background-repeat: no-repeat
-      background-size: cover
-      display block
-      height rem(45px)
-      width rem(45px)
-      transition: background-color .1s ease-in
-      mask: embedurl("../sprites/arrow-down.svg", "utf8") no-repeat 50% 50%/30px 30px
-      z-index 5
-    &::after
-      display: block
-      position: absolute
-      background-image: linear-gradient(to bottom, transparent 0%, rgba($black, .6) 100%)
-      top 0
-      right 0
-      left 0
-      bottom 0
-      content: ''
-      z-index 1
+  #header-image
+    &.pages
+      figure.desktop
+        display none
+        visibility hidden
+      +above(m)
+        figure.mobile
+          display none
+          visibility none
+        figure.desktop
+          display block
+          visibility visible
+
+    figure
+      line-height: 0
+      position relative
+      z-index 0
+      &::before
+        position absolute
+        background-color $white
+        bottom rem(31.75px)
+        left 50%
+        margin-left -(rem((16.5/2)px))
+        content: ''
+        background-repeat: no-repeat
+        background-size: cover
+        display block
+        height rem(16.5px)
+        width rem(16.5px)
+        transition: background-color .1s ease-in
+        mask: embedurl("../sprites/arrow-down.svg", "utf8") no-repeat 50% 50%/16.5px 16.5px
+        z-index 5
+        +above(m)
+          bottom rem(53.5px)
+          margin-left -(rem((33/2)px))
+          height rem(33px)
+          width rem(33px)
+          mask: embedurl("../sprites/arrow-down.svg", "utf8") no-repeat 50% 50%/33px 33px
+
+      &::after
+        display: block
+        position: absolute
+        background-image: linear-gradient(to bottom, transparent 0%, rgba($black, .6) 100%)
+        top 0
+        right 0
+        left 0
+        bottom 0
+        content: ''
+        z-index 1
 
 
 +above(m)
