--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -255,6 +255,29 @@ $side-menu-sub-font-weight = 700
 $side-menu-sub-line-color = $dark-blue
 
 // ------------------------------------------------------
+// ------ BREADCRUMBS
+
+$bread-background-color = $background-gray
+$bread-font-family = $sans-serif-headline
+$bread-font-size-mobile = rem(10px)
+$bread-font-size-desktop = rem(12px)
+$bread-font-weight = 700
+$bread-text-transform = uppercase
+$bread-link-color = $navy
+$bread-current-page-color = $light-blue
+$bread-divider-character = '/'
+$bread-divider-color = $medium-gray
+$bread-divider-width = rem(8px)
+
+$bread-item-pad-top-mobile = rem(23px)
+$bread-item-pad-side-mobile = $bread-divider-width
+$bread-item-pad-bottom-mobile = rem(20px)
+
+$bread-item-pad-top-desktop = rem(27px)
+$bread-item-pad-side-desktop = $bread-divider-width
+$bread-item-pad-bottom-desktop = rem(25px)
+
+// ------------------------------------------------------
 // ------ CONTENT AREA
 
 $content-text-color = $navy
