--- a/src/styles/site/_layout-columns.styl
+++ b/src/styles/site/_layout-columns.styl
@@ -2,6 +2,7 @@
   width 100%
   +above(m)
     lost-flex-container: row
+    padding rem(40px) 0
   // +above(xl)
   //   padding rem(90px) rem(160px)
 
