--- a/templates/layouts/base/_base.twig
+++ b/templates/layouts/base/_base.twig
@@ -6,6 +6,8 @@
 
 {% block core %}
 
+  {% include 'modules/bread/_crumbs' %}
+
   {% block content %}{% endblock %}
 
   {# {% cache for 4 weeks %} #}
