--- a/src/styles/modules/_block-quick-links.styl
+++ b/src/styles/modules/_block-quick-links.styl
@@ -84,3 +84,11 @@ aside #block--quick-links
       color $module-quick-links-link-hover-color
       &:after
         margin-left: 0.35em
+
++above(m)
+  .page-type--standard
+    aside #block--quick-links
+      margin-top -(rem(144px))
+  .page-section--news-events
+    aside #block--quick-links
+      margin-top -(rem(80px))
