--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -19,7 +19,6 @@ $newsImageRatio = ((1/3) * 100)%
     .parallax__layer--base
       background-color $white
       height: 100vh
-      padding: rem(40px) 0
       transform-style: preserve-3d
       transform: translate3d(0)
       top: $landingImageRatio
@@ -28,8 +27,8 @@ $newsImageRatio = ((1/3) * 100)%
       // main
       //   margin: 0 0 rem(40px) 0
 
-      aside
-          margin-top -(rem(120px))
+      // aside
+      //   margin-top -(rem(120px))
 
 
   .page-type--landing
@@ -40,7 +39,7 @@ $newsImageRatio = ((1/3) * 100)%
     .parallax .parallax__layer--base
       top: 'calc(%s - %s)' % ($newsImageRatio 1rem)
 
-      aside
-          margin-top -(rem(80px))
+      // aside
+      //     margin-top -(rem(80px))
 
 
