--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -1,11 +1,13 @@
 @import 'normalize.css/normalize.css'
 
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i\|Source\+Sans\+Pro:400,400i,700,700i\|Playfair\+Display:700i)
+@import url(//fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i\|Source\+Sans\+Pro:400,400i,700,700i\|Playfair\+Display:700i)
 
 @require './_vars'
 @require './mixins/*'
 
 @lost flexbox flex
+$fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
+@import "font-awesome-stylus"
 
 
 // Import generated SVG sprites
@@ -77,5 +79,6 @@
 @import './modules/_header-text-only'
 @import './modules/_meta'
 @import './modules/_lead-in'
+@import './modules/_content-files'
 
 @import './site/*'
