--- a/src/styles/modules/_header-image-block.styl
+++ b/src/styles/modules/_header-image-block.styl
@@ -80,6 +80,6 @@
 +above(m)
   .page-section--news-events
     #header-image
-      margin: rem(40px) 0 0
-      lost-column 32/36
+      margin: $header-image-top-margin-news-desktop 0 0
+      lost-column: 32/36
       lost-offset: 2/36
