--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -215,6 +215,8 @@ $top-menu-main-font-weight = 700
 $top-menu-link-color = $navy
 $top-menu-link-hover-color = $light-blue
 $top-menu-bottom-shadow = 0 2px 10px rgba($black, 0.1)
+$top-menu-height-mobile = rem(80px)
+$top-menu-height-desktop = rem(94px)
 
 // ------------------------------------------------------
 // ------ FOOTER
@@ -277,6 +279,9 @@ $bread-item-pad-top-desktop = rem(27px)
 $bread-item-pad-side-desktop = $bread-divider-width
 $bread-item-pad-bottom-desktop = rem(25px)
 
+$breadcrumb-total-height-mobile = rem(23px + 10px + 20px)
+$breadcrumb-total-height-desktop = rem(27px + 12px + 25px)
+
 // ------------------------------------------------------
 // ------ CONTENT AREA
 
@@ -321,6 +326,8 @@ $header-block-title-size-mobile = rem(36)
 $header-block-title-size-desktop = rem(60)
 $header-block-title-weight = 700
 $header-block-title-transform = uppercase
+
+$header-image-top-margin-news-desktop = rem(40px)
 
 // ------------------------------------------------------
 // ------ PAGE LEAD IN
