--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -1,12 +1,15 @@
-$landingImageRatio = ((5/12) * 100)%
+$landingImageRatio = (5/12)
 $newsImageRatio = ((1/3) * 100)%
 
 +above(m)
   .parallax
     perspective: 1px
-    height: 100vw
+    height 'calc(%s - %s)' % (100vh $top-menu-height-mobile)
+    // height: 100vh
     overflow-x: hidden
     overflow-y: auto
+    +above(l)
+      height 'calc(%s - %s)' % (100vh $top-menu-height-desktop)
 
     .parallax__layer
       position: absolute
@@ -18,28 +21,20 @@ $newsImageRatio = ((1/3) * 100)%
       transform: translateZ(-1px) scale(2)
     .parallax__layer--base
       background-color $white
-      height: 100vh
+      height 'calc(%s - %s)' % (100vh $top-menu-height-desktop)
       transform-style: preserve-3d
       transform: translate3d(0)
-      top: $landingImageRatio
-      lost-flex-container: row
-
-      // main
-      //   margin: 0 0 rem(40px) 0
-
-      // aside
-      //   margin-top -(rem(120px))
+      top: 'calc(100vw * %s)' % $landingImageRatio
 
 
-  .page-type--landing
-    .parallax .parallax__layer--base
-      top: $landingImageRatio
+  // .page-type--landing
+  //   .parallax .parallax__layer--base
+  //     top: $landingImageRatio
+  //     top: 'calc(100vw * %s)' % $landingImageRatio
 
   .page-section--news-events
     .parallax .parallax__layer--base
-      top: 'calc(%s - %s)' % ($newsImageRatio 1rem)
-
-      // aside
-      //     margin-top -(rem(80px))
+      topMarginNews = $header-image-top-margin-news-desktop + $breadcrumb-total-height-desktop
+      top: 'calc(((100vw * 32/36) / 3) + %s)' % topMarginNews
 
 
