optimizing for parallax to work globally

--- a/templates/singles/homepage/index.twig
+++ b/templates/singles/homepage/index.twig
@@ -2,7 +2,7 @@
     Homepage
 #}
 
-{% extends "layouts/base/_base" %}
+{% extends "layouts/base/_base_parallax" %}
 
 {# HTML #}
 {% block content %}
