--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -24,17 +24,18 @@ $newsImageRatio = ((1/3) * 100)%
       height 'calc(%s - %s)' % (100vh $top-menu-height-desktop)
       transform-style: preserve-3d
       transform: translate3d(0)
+      top: 0
+
+
+  .page-type--landing
+  .page-type--standard
+    .parallax .parallax__layer--base
       top: 'calc(100vw * %s)' % $landingImageRatio
 
-
-  // .page-type--landing
-  //   .parallax .parallax__layer--base
-  //     top: $landingImageRatio
-  //     top: 'calc(100vw * %s)' % $landingImageRatio
-
-  .page-section--news-events
+  .page-section--newsEvents
     .parallax .parallax__layer--base
       topMarginNews = $header-image-top-margin-news-desktop + $breadcrumb-total-height-desktop
-      top: 'calc(((100vw * 32/36) / 3) + %s)' % topMarginNews
+      min-height: 'calc(((100vmin * (32/36)) / 3) + %s)' % topMarginNews
+      top: 'calc(((100vmax * (32/36)) / 3) + %s)' % topMarginNews
 
 
