--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -393,3 +393,13 @@ $button-transform = uppercase
 $button-padding = rem(28.5px)
 $button-hover-background = $medium-blue
 $button-hover-box-shadow = 0 0 rem(15px) rgba($black,.1)
+
+// ------------------------------------------------------
+// ------ HOMEPAGE
+
+$homepage-header-block-title-color = $white
+$homepage-header-block-title-font = $sans-serif-headline
+$homepage-header-block-title-size-mobile = rem(14)
+$homepage-header-block-title-size-desktop = rem(18)
+$homepage-header-block-title-weight = 700
+$homepage-header-block-title-transform = uppercase
