--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -26,6 +26,7 @@ $newsImageRatio = ((1/3) * 100)%
       transform: translate3d(0)
 
 
+  .page-section--homepage
   .page-type--landing
   .page-type--standard
     .parallax .parallax__layer--base
