continued work on homepage

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -365,6 +365,7 @@ $module-subpages-arrow-color = $medium-blue
 $module-subpages-link-hover-color = $medium-blue
 
 // ------------------------------------------------------
+// ------ BLOCK
 // ------ QUICK LINKS
 
 $module-quick-links-box-shadow = 0 0 rem(15px) rgba($black,.1)
@@ -403,3 +404,45 @@ $homepage-header-block-title-size-mobile = rem(14)
 $homepage-header-block-title-size-desktop = rem(18)
 $homepage-header-block-title-weight = 700
 $homepage-header-block-title-transform = uppercase
+
+
+// ------------------------------------------------------
+// ------ BLOCK
+// ------ MAYOR'S WELCOME
+
+$module-mayors-welcome-box-shadow = 0 0 rem(15px) rgba($black,.1)
+$module-mayors-welcome-background-color = $white
+$module-mayors-welcome-title-font = $sans-serif-headline
+$module-mayors-welcome-title-transform = uppercase
+
+$module-mayors-welcome-name-color = $light-blue
+$module-mayors-welcome-name-size-mobile = rem(14px)
+$module-mayors-welcome-name-size-desktop = rem(14px)
+$module-mayors-welcome-headline-color = $navy
+$module-mayors-welcome-headline-size-mobile = rem(28px)
+$module-mayors-welcome-headline-size-desktop = rem(36px)
+$module-mayors-welcome-text-color = $navy
+$module-mayors-welcome-text-size-mobile = rem(18px)
+$module-mayors-welcome-text-size-desktop = rem(18px)
+
+
+// ------------------------------------------------------
+// ------ BLOCK
+// ------ SPOTLIGHT
+
+$module-spotlight-box-shadow = 0 0 rem(15px) rgba($black,.1)
+$module-spotlight-background-color = $white
+
+$module-spotlight-name-font = $sans-serif-headline
+$module-spotlight-name-transform = uppercase
+$module-spotlight-name-color = $navy
+$module-spotlight-name-size-mobile = rem(21px)
+$module-spotlight-name-size-desktop = rem(28px)
+
+$module-spotlight-title-font = $serif
+$module-spotlight-title-style = italic
+$module-spotlight-title-color = $light-blue
+$module-spotlight-title-size-mobile = rem(18px)
+$module-spotlight-title-size-desktop = rem(24px)
+
+
