--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -80,5 +80,8 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import './modules/_meta'
 @import './modules/_lead-in'
 @import './modules/_content-files'
+@import './modules/_block-mayor-welcome'
+@import './modules/_block-spotlight'
+@import './modules/_block-process'
 
 @import './site/*'
