--- a/src/styles/modules/_footer.styl
+++ b/src/styles/modules/_footer.styl
@@ -15,6 +15,7 @@ footer
         display: inline-block
 
 #footer--container
+  background-color $white
   padding: rem(72px) rem(15px) rem(30px)
   +above(tablet-min)
     lost-flex-container: row
