--- a/templates/layouts/base/_base_parallax.twig
+++ b/templates/layouts/base/_base_parallax.twig
@@ -18,6 +18,8 @@
 
     {% block content %}{% endblock %}
 
+    {% block content_two %}{% endblock %}
+
     {# {% cache for 4 weeks %} #}
       {% include 'modules/footer/_footer' %}
     {# {% endcache %} #}
