--- a/src/styles/site/_parallax.styl
+++ b/src/styles/site/_parallax.styl
@@ -1,6 +1,9 @@
 $landingImageRatio = (5/12)
 $newsImageRatio = ((1/3) * 100)%
 
+.parallax__layer--base #page--inner--columns
+  background-color $white
+
 +above(m)
   .parallax
     perspective: 1px
@@ -20,7 +23,6 @@ $newsImageRatio = ((1/3) * 100)%
     .parallax__layer--back
       transform: translateZ(-1px) scale(2)
     .parallax__layer--base
-      background-color $white
       height 'calc(%s - %s)' % (100vh $top-menu-height-desktop)
       transform-style: preserve-3d
       transform: translate3d(0)
