--- a/templates/layouts/base/_base.twig
+++ b/templates/layouts/base/_base.twig
@@ -10,6 +10,8 @@
 
   {% block content %}{% endblock %}
 
+  {% block content_two %}{% endblock %}
+
   {# {% cache for 4 weeks %} #}
     {% include 'modules/footer/_footer' %}
   {# {% endcache %} #}
