continued work on homepage

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -115,6 +115,7 @@ $light-silver = #aaa
 $moon-gray = #ccc
 // $light-gray = #eee
 $near-white = #f4f4f4
+$gray94 = #f0f0f0
 $white = #fff
 
 $transparent = transparent
@@ -444,5 +445,85 @@ $module-spotlight-title-style = italic
 $module-spotlight-title-color = $light-blue
 $module-spotlight-title-size-mobile = rem(18px)
 $module-spotlight-title-size-desktop = rem(24px)
+
+
+// ------------------------------------------------------
+// ------ BLOCK
+// ------ STORY SHARE
+
+$module-story-share-box-shadow = 0 0 rem(15px) rgba($black,.1)
+$module-story-share-background-color = $navy
+
+$module-story-share-font = $sans-serif
+$module-story-share-color = $white
+$module-story-share-weight = 700
+$module-story-share-size-mobile = rem(18px)
+$module-story-share-size-desktop = rem(21px)
+
+
+// ------------------------------------------------------
+// ------ BLOCK
+// ------ WEATHER TIP
+$module-weather-tip-background-color = $light-blue
+$module-weather-tip-icon-color = $navy
+$module-weather-tip-text-color = $white
+$module-weather-tip-box-shadow = inset 0px rem(-15px) rem(15px) rem(-15px) rgba(0,0,0,0.1)
+
+$module-weather-tip-text-font = $sans-serif-headline
+$module-weather-tip-text-transform = uppercase
+$module-weather-tip-text-size-mobile = rem(12px)
+$module-weather-tip-text-size-desktop = rem(12px)
+
+// ------------------------------------------------------
+// ------ BLOCK
+// ------ NEWS/EVENTS ON HOMEPAGE
+
+$module-news-events-home-box-shadow = 0 0 rem(15px) rgba($black,.1)
+$module-news-events-home-background-color = $white
+$module-news-events-home-background-hover-color = $light-blue
+$module-news-events-home-border-width = rem(2px)
+$module-news-events-home-border-color = $gray94
+
+$module-news-events-home-headline-font = $sans-serif-headline
+$module-news-events-home-headline-transform = uppercase
+$module-news-events-home-headline-color = $navy
+$module-news-events-home-headline-icon-color = $light-blue
+$module-news-events-home-headline-size-mobile = rem(21px)
+$module-news-events-home-headline-size-desktop = rem(24px)
+
+$module-news-events-home-type-font = $sans-serif-headline
+$module-news-events-home-type-transform = uppercase
+$module-news-events-home-type-color = $light-blue
+$module-news-events-home-type-hover-color = $white
+$module-news-events-home-type-size-mobile = rem(12px)
+$module-news-events-home-type-size-desktop = rem(12px)
+
+$module-news-events-home-title-font = $sans-serif
+$module-news-events-home-title-transform = normal
+$module-news-events-home-title-color = $navy
+$module-news-events-home-title-hover-color = $white
+$module-news-events-home-title-size-mobile = rem(18px)
+$module-news-events-home-title-size-desktop = rem(21px)
+
+
+// ------------------------------------------------------
+// ------ BLOCK
+// ------ LOCATION
+
+$module-location-headline-font = $sans-serif-headline
+$module-location-headline-transform = uppercase
+$module-location-headline-color = $navy
+$module-location-headline-size-mobile = rem(28px)
+$module-location-headline-size-desktop = rem(36px)
+
+$module-location-subheadline-font = $module-location-headline-font
+$module-location-subheadline-transform = uppercase
+$module-location-subheadline-color = $light-blue
+$module-location-subheadline-size-mobile = rem(14px)
+$module-location-subheadline-size-desktop = rem(14px)
+
+$module-location-text-color = $navy
+$module-location-text-size-mobile = rem(21px)
+$module-location-text-size-desktop = rem(18px)
 
 
