--- a/src/styles/master.styl
+++ b/src/styles/master.styl
@@ -83,5 +83,10 @@ $fa-font-path = "//netdna.bootstrapcdn.com/font-awesome/4.7.0/fonts"
 @import './modules/_block-mayor-welcome'
 @import './modules/_block-spotlight'
 @import './modules/_block-process'
+@import './modules/_block-weather-tip'
+@import './modules/_block-news-events-home'
+@import './modules/_block-story-share'
+@import './modules/_block-home-featured-video'
+@import './modules/_block-location'
 
 @import './site/*'
