--- a/src/styles/modules/_block-mayor-welcome.styl
+++ b/src/styles/modules/_block-mayor-welcome.styl
@@ -81,6 +81,12 @@
     @extend $button
     display block
     margin-top rem(35px)
+    margin-left auto
+    margin-right auto
+    width 65%
     +above(m)
       display inline-block
+      margin-left 0
+      margin-right 0
       min-width rem(220px)
+      width auto
