--- a/src/styles/modules/_block-spotlight.styl
+++ b/src/styles/modules/_block-spotlight.styl
@@ -77,9 +77,12 @@
       > h3:after
         margin-left: 0.35em
 
+
 #content
   > .block--spotlight
-    margin-bottom rem(57px)
+    margin-bottom rem(12px)
+    +above(m)
+      margin-bottom rem(57px)
 
 #block--spotlights-two
   padding-top rem(10px)
