--- a/templates/modules/content/_block-spotlight.twig
+++ b/templates/modules/content/_block-spotlight.twig
@@ -43,7 +43,7 @@
     {% endif %}
 
     <h2>{{ spotlight.title }}</h2>
-    <h3>Champion of the Month</h3>
+    <h3>{{ spotlight.storyType.one().slug == 'champions' ? 'Champion of the Month' : spotlight.storyType.one().title }}</h3>
 
   </a>
 </section>
