pushing to save

--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -474,6 +474,7 @@ $module-weather-tip-text-transform = uppercase
 $module-weather-tip-text-size-mobile = rem(12px)
 $module-weather-tip-text-size-desktop = rem(12px)
 
+
 // ------------------------------------------------------
 // ------ BLOCK
 // ------ NEWS/EVENTS ON HOMEPAGE
@@ -525,5 +526,21 @@ $module-location-subheadline-size-desktop = rem(14px)
 $module-location-text-color = $navy
 $module-location-text-size-mobile = rem(21px)
 $module-location-text-size-desktop = rem(18px)
+
+
+// ------------------------------------------------------
+// ------ BLOCK
+// ------ PROCESS
+$module-process-background-color = $navy
+$module-process-logo-color = $white
+$module-process-text-color = $white
+$module-process-link-color = $light-blue
+$module-process-link-hover-color = $medium-blue
+$module-process-link-decoration = underline
+
+$module-process-text-font = $sans-serif
+$module-process-text-font-weight = 600
+$module-process-text-size-mobile = rem(14px)
+$module-process-text-size-desktop = rem(14px)
 
 
