--- a/src/styles/_vars.styl
+++ b/src/styles/_vars.styl
@@ -31,7 +31,7 @@ desktop-min = (rupture.tablet-cutoff)
 // $sans-serif = -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif
 $sans-serif = 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif
 $sans-serif-headline = 'Montserrat', sans-serif
-// $serif = georgia, serif
+// $serif2 = georgia, serif
 $serif = 'Playfair Display', georgia, serif
 $code = consolas, monaco, monospace
 
@@ -509,6 +509,30 @@ $module-news-events-home-title-size-desktop = rem(21px)
 
 // ------------------------------------------------------
 // ------ BLOCK
+// ------ VIDEO FEATURE
+$module-video-feature-background-color = $black
+
+$module-video-feature-headline-font = $sans-serif-headline
+$module-video-feature-headline-transform = uppercase
+$module-video-feature-headline-color = $white
+$module-video-feature-headline-size-mobile = rem(36px)
+$module-video-feature-headline-size-desktop = rem(60px)
+
+$module-video-feature-subheadline-font = $serif
+$module-video-feature-subheadline-style = italic
+$module-video-feature-subheadline-color = $white
+$module-video-feature-subheadline-size-mobile = rem(14px)
+$module-video-feature-subheadline-size-desktop = rem(24px)
+
+$module-video-feature-video-font = $sans-serif-headline
+$module-video-feature-video-transform = uppercase
+$module-video-feature-video-font-weight = 700
+$module-video-feature-video-color = $white
+$module-video-feature-video-hover-color = $light-blue
+$module-video-feature-video-font-size = rem(18px)
+
+// ------------------------------------------------------
+// ------ BLOCK
 // ------ LOCATION
 
 $module-location-headline-font = $sans-serif-headline
@@ -533,6 +557,8 @@ $module-location-text-size-desktop = rem(18px)
 // ------ PROCESS
 $module-process-background-color = $navy
 $module-process-logo-color = $white
+$module-process-logo-hover-color = $light-blue
+
 $module-process-text-color = $white
 $module-process-link-color = $light-blue
 $module-process-link-hover-color = $medium-blue
