--- a/src/styles/modules/_block-process.styl
+++ b/src/styles/modules/_block-process.styl
@@ -1,5 +1,6 @@
 #block--process
   background-color $module-process-background-color
+  padding rem(72px) rem(15px)
   p
     color $module-process-text-color
     font-family $module-process-text-font
@@ -13,8 +14,10 @@
     a
       color $module-process-link-color
       text-decoration $module-process-link-decoration
+      transition: color .15s ease-in
+      display block
       &:hover
-        $module-process-link-hover-color
+        color $module-process-link-hover-color
 
   figure
     margin 0
@@ -24,17 +27,36 @@
       height auto
       vertical-align: middle
 
-  .logo svg g
-    fill $module-process-logo-color
+  .collaboration
+    padding-left rem(55px)
+    padding-right rem(55px)
+    margin rem(37.5) 0
+
+    &:last-child
+      margin-bottom 0
+
+    +above(m)
+      padding 0
+      margin 0
+
+    a
+      display block
+      &:hover
+        svg g
+          fill $module-process-logo-hover-color
+    svg g
+      fill $module-process-logo-color
+      transition: fill .15s ease-in
 
   +above(m)
     display: flex
     flex-flow: row wrap
     align-items: stretch
     justify-content: center
+    padding 0
 
     p
-    .logo
+    .collaboration
       flex-grow: 1
       display inline-block
       display: flex
@@ -50,5 +72,5 @@
       max-width rem(240px)
       text-align right
 
-    .logo
+    .collaboration
       max-width rem(188px)
