--- a/src/styles/site/_layout-columns.styl
+++ b/src/styles/site/_layout-columns.styl
@@ -39,4 +39,13 @@
         lost-offset: 4/36
 
 
-
++above(m)
+  .page-section--homepage
+    aside
+      margin-top -(rem(170px))
+  .page-type--standard
+    aside
+      margin-top -(rem(144px))
+  .page-section--newsEvents
+    aside
+      margin-top -(rem(80px))
