--- a/src/styles/modules/_block-mayor-welcome.styl
+++ b/src/styles/modules/_block-mayor-welcome.styl
@@ -35,16 +35,16 @@
     margin 0 auto
     overflow hidden
     position relative
-    top -(rem(16px))
+    top rem(-16px)
     width rem(102px)
     +above(m)
       border rem(10px) solid $white
-      height rem(160px)
+      height rem(200px)
       margin 0
       position absolute
       right 'calc(%s * (-%s/%s * -%s) - (%s - %s * (-%s/%s * -%s)) + %s) !important' % (100vw 1 36 1 30px 30px 1 36 1 30px)
-      top -(rem(35px))
-      width rem(160px)
+      top rem(-34.5px)
+      width rem(200px)
 
 
   > h2
